@@ -1,3 +1,8 @@
+2001-02-05  Jim Wilson  <wilson@redhat.com>
+
+	* config/tc-ia64.c (errata_nop_necessary_p): Return 0 instead of
+	aborting for invalid operands.
+
 2001-02-06  Alan Modra  <alan@linuxcare.com.au>
 
 	* config/tc-hppa.c (fix_new_hppa): Pass in unwind directly rather
